--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
 						<p>Pour échanger au sujet de votre projet et <b>établir un devis</b>, je vous invite à me le décrire de la manière la plus détaillée possible, afin de <b>cerner au mieux vos envies et vos besoins</b>.</p>
 						<p>Les informations essentielles sont, par exemple, le <b>nom</b> de l’artiste ou du groupe, le <b>type de prestation</b> (pré-production, enregistrement, mixage, mastering…), le <b>nombre de morceaux et la longueur totale du projet</b>, les <b>dates/deadlines</b> associées, le <b>budget global de production</b> (de la pré-production au mastering), et si le projet bénéficie de l’<b>accompagnement d’une structure</b> (label, SMAC…).</p>
 						<p>Quelques lignes supplémentaires <b>détaillant le projet</b> (influences/références, effectif instrumental et vocal, matériel, prises live ou overdub...) seront appréciées !</p>
-						<p>Vous pouvez adresser vos demandes par mail à <b>synusiastudio(at)protonmail.com</b>.</p>
+						<p>Vous pouvez adresser vos demandes par mail à <b>contact(at)synusiastudio.com</b>.</p>
 					</div>
 					<div class="second">
 						<p>(Par respect pour votre projet ainsi que pour cette étape cruciale de la production d'un disque, je ne masterise pas les projets que je mixe. En revanche, je peux vous orienter vers des technicien.nes qui sauront achever votre projet dans les règles de l'art !)</p>
