--- a/contactENG.html
+++ b/contactENG.html
@@ -33,7 +33,7 @@
 						<p>To discuss your project and <b>get a quote</b>, I invite you to describe it to me in the most detailed way, in order to <b>best identify and meet your needs and wishes</b>.</p>
 						<p>The essential infos are, for example, the artist’s or band’s <b>name</b>, the <b>type of service</b> (pre-production, recording, mixing, mastering…), the <b>number of tracks and overall project’s length</b>, relevant <b>dates/deadlines</b>, the <b>overall production budget</b> (from pre-production to mastering) and if the <b>project benefits from the support of a society</b> (such as a record company).</p>
 						<p>A few more lines <b>describing the project</b> (influences/references, instrumental and vocal lineup, gear, live or overdubs…) would be appreciated!</p>
-						<p>All requests can be sent via mail to <b>synusiastudio(at)protonmail.com</b>.</p>
+						<p>All requests can be sent via mail to <b>contact(at)synusiastudio.com</b>.</p>
 					</div>
 					<div class="second">
 						<p>(Out of respect for your project and this crucial step of a record’s production, I don’t master the projects I already mixed. However, I can recommend engineers to put these finishing touches to your record!)</p>
