--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<div id="fade">
 				<header>
 					<div id="logo">
-							<a href="index.html">
+							<a href="home.html">
 								<img src="Logo site.png" alt="Logo"/>
 							</a>
 					</div>
