--- a/homeENG.html
+++ b/homeENG.html
@@ -4,7 +4,7 @@
 			<meta charset="utf-8" />
 			<link rel="stylesheet" href="index.css" />
 			<title>Synusia Studio | Mobile studio based in Angers (France)</title>
-			<link rel="icon" href="Formes.png" />
+			<link rel="icon" href="Formes.jpeg" />
 		</head>
 		
 		<body>
@@ -12,7 +12,7 @@
 				<header>
 					<div id="logo">
 							<a href="homeENG.html">
-								<img src="Logo site.png" alt="Logo"/>
+								<img src="Logo site.jpeg" alt="Logo"/>
 							</a>
 					</div>
 					
@@ -33,15 +33,15 @@
 				</article>
 			
 				<footer>
-					<div class="ENG"><a href="home.html"><img src="frenchflag.png"></a/></div>
+					<div class="ENG"><a href="home.html"><img src="frenchflag.jpeg"></a/></div>
 					<p class="quote"><i><b>synusia</b>, feminine noun, from the Ancient Greek "συνουσία" ("shared existence, gathered people"): founding principle of Plato's Academy, claiming the need of critical dialogue; also refers to the phytosociological designation of a temporary combination of living beings.</i></p>
 					<p class="copyright">Programming and design : Hugo Fouassier / Photography : Candice Le Dréau.</p>
 					<div id="rs">
 						<a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/synusia.studio">
-							<img src="instagram.png" alt="Instagram"/>
+							<img src="instagram.jpeg" alt="Instagram"/>
 						</a>
 						<a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/synusiastudio">
-							<img src="facebook.png" alt="Facebook"/>
+							<img src="facebook.jpeg" alt="Facebook"/>
 						</a>
 					</div>
 				</footer>
