--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 			<meta charset="utf-8" />
 			<link rel="stylesheet" href="index.css" />
 			<title> Synusia Studio | Studio nomade basé à Angers </title>
-			<link rel="icon" href="Formes.png" />
+			<link rel="icon" href="Formes.jpeg" />
 		</head>
 		
 		<body>
@@ -12,7 +12,7 @@
 				<header>
 					<div id="logo">
 							<a href="home.html">
-								<img src="Logo site.png" alt="Logo"/>
+								<img src="Logo site.jpeg" alt="Logo"/>
 							</a>
 					</div>
 					
@@ -33,15 +33,15 @@
 				</article>
 			
 				<footer>
-					<div class="ENG"><a href="indexENG.html"><img src="ukflag.png"></a/></div>
+					<div class="ENG"><a href="indexENG.html"><img src="ukflag.jpeg"></a/></div>
 					<p class="quote"><i><b>synusia</b>, nom féminin, du grec ancien "συνουσία" ("existence en commun, personnes réunies") : principe fondateur de l'Académie de Platon, revendiquant le besoin de dialogue critique; désigne également en phytosociologie une association temporaire d'organismes vivants.</i></p>
 					<p class="copyright">Programmation et design : Hugo Fouassier / Photographie : Candice Le Dréau.</p>
 					<div id="rs">
 						<a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/synusia.studio">
-							<img src="instagram.png" alt="Instagram"/>
+							<img src="instagram.jpeg" alt="Instagram"/>
 						</a>
 						<a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/synusiastudio">
-							<img src="facebook.png" alt="Facebook"/>
+							<img src="facebook.jpeg" alt="Facebook"/>
 						</a>
 					</div>
 				</footer>
