--- a/aboutENG.html
+++ b/aboutENG.html
@@ -4,14 +4,14 @@
 			<meta charset="utf-8" />
 			<link rel="stylesheet" href="about.css" />
 			<title>Synusia Studio | Mobile studio based in Angers (France)</title>
-			<link rel="icon" href="Formes.jpeg" />
+			<link rel="icon" href="Formes.png" />
 		</head>
 		
 		<div id="fade">
 				<header>
 					<div id="logo">
 							<a href="indexENG.html">
-								<img src="Logo site.jpeg" alt="Logo"/>
+								<img src="Logo site.png" alt="Logo"/>
 							</a>
 					</div>
 					
@@ -40,10 +40,10 @@
 					<p class="copyright">Programming and design : Hugo Fouassier / Photography : Candice Le Dréau.</p>
 						<div id="rs">
 							<a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/synusia.studio">
-								<img src="instagram.jpeg" alt="Instagram"/>
+								<img src="instagram.png" alt="Instagram"/>
 							</a>
 							<a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/synusiastudio">
-								<img src="facebook.jpeg" alt="Facebook"/>
+								<img src="facebook.png" alt="Facebook"/>
 							</a>
 						</div>
 				</footer>
