--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 		<head>
 			<meta charset="utf-8" />
 			<link rel="stylesheet" href="about.css" />
-			<title> Synusia Studio | Studio nomade basé à Angers </title>
+			<title> Synusia Studio | Studio mobile basé à Angers </title>
 			<link rel="icon" href="Formes.png" />
 		</head>
 		
@@ -28,7 +28,7 @@
 				</header>
 			
 				<article>
-					<p><b>Synusia Studio</b> est une structure nomade basée à <b>Angers (France)</b>, fondée et dirigée par <b>Hugo Fouassier</b>, musicien et technicien son (live/studio).</p>
+					<p><b>Synusia Studio</b> est une structure mobile basée à <b>Angers (France)</b>, fondée et dirigée par <b>Hugo Fouassier</b>, musicien et technicien son (live/studio).</p>
 					<p></p>Elle propose des services <b>d’enregistrement</b> s’adaptant à tous les espaces de prise (studio, scène, lieux atypiques...) et à tous les workflows (prises live, semi-live, overdubs/re-re…), mais également des prestations de <b>mixage</b> et de <b>mastering</b>. Pour chaque étape, une participation plus ou moins importante à la <b>direction artistique</b> du projet est possible.</p>
 					<p>Afin de préparer au mieux vos enregistrements, il est également possible de planifier des sessions de <b>pré-productions</b>, dans des conditions proches sinon similaires aux sessions d'enregistrement.</p>
 					<p>Les projets sortant du cadre classique du studio, comme la captation et le mixage de <b>concerts</b>, de <b>podcasts</b> ou encore de <b>livres audio</b> sont évidemment les bienvenus.</p>
@@ -39,12 +39,14 @@
 					<p class="quote"><i><b>synusia</b>, nom féminin, du grec ancien "συνουσία" ("existence en commun, personnes réunies") : principe fondateur de l'Académie de Platon, revendiquant le besoin de dialogue critique; désigne également en phytosociologie une association temporaire d'organismes vivants.</i></p>
 					<p class="copyright">Programmation et design : Hugo Fouassier / Photographie : Candice Le Dréau.</p>
 						<div id="rs">
-							<a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/synusia.studio">
-								<img src="instagram.png" alt="Instagram"/>
-							</a>
-							<a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/synusiastudio">
-								<img src="facebook.png" alt="Facebook"/>
-							</a>
+							<div id="Instagram">
+								<a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/synusia.studio">
+									<img src="instagram.png" alt="Instagram"/>
+								</a>
+							</div>
+								<a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/synusiastudio">
+									<img src="facebook.png" alt="Facebook"/>
+								</a>
 						</div>
 				</footer>
 		</body>
