--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 		<head>
 			<meta charset="utf-8" />
 			<link rel="stylesheet" href="contact.css" />
-			<title> Synusia Studio | Studio nomade basé à Angers </title>
+			<title> Synusia Studio | Studio mobile basé à Angers </title>
 			<link rel="icon" href="Formes.png" />
 		</head>
 		
@@ -44,13 +44,15 @@
 					<p class="quote"><i><b>synusia</b>, nom féminin, du grec ancien "συνουσία" ("existence en commun, personnes réunies") : principe fondateur de l'Académie de Platon, revendiquant le besoin de dialogue critique; désigne également en phytosociologie une association temporaire d'organismes vivants.</i></p>
 					<p class="copyright">Programmation et design : Hugo Fouassier / Photographie : Candice Le Dréau.</p>
 						<div id="rs">
+						<div id="Instagram">
 							<a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/synusia.studio">
 								<img src="instagram.png" alt="Instagram"/>
 							</a>
+						</div>
 							<a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/synusiastudio">
 								<img src="facebook.png" alt="Facebook"/>
 							</a>
-						</div>
+					</div>
 				</footer>
 		</body>
 </html>
