--- a/homeENG.html
+++ b/homeENG.html
@@ -37,12 +37,14 @@
 					<p class="quote"><i><b>synusia</b>, feminine noun, from the Ancient Greek "συνουσία" ("shared existence, gathered people"): founding principle of Plato's Academy, claiming the need of critical dialogue; also refers to the phytosociological designation of a temporary combination of living beings.</i></p>
 					<p class="copyright">Programming and design : Hugo Fouassier / Photography : Candice Le Dréau.</p>
 					<div id="rs">
-						<a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/synusia.studio">
-							<img src="instagram.png" alt="Instagram"/>
-						</a>
-						<a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/synusiastudio">
-							<img src="facebook.png" alt="Facebook"/>
-						</a>
+						<div id="Instagram">
+							<a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/synusia.studio">
+								<img src="instagram.png" alt="Instagram"/>
+							</a>
+						</div>
+							<a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/synusiastudio">
+								<img src="facebook.png" alt="Facebook"/>
+							</a>
 					</div>
 				</footer>
 		</body>
