--- a/aboutENG.html
+++ b/aboutENG.html
@@ -10,7 +10,7 @@
 		<div id="fade">
 				<header>
 					<div id="logo">
-							<a href="indexENG.html">
+							<a href="homeENG.html">
 								<img src="Logo site.png" alt="Logo"/>
 							</a>
 					</div>
@@ -39,13 +39,15 @@
 					<p class="quote"><i><b>synusia</b>, feminine noun, from the Ancient Greek "συνουσία" ("shared existence, gathered people"): founding principle of Plato's Academy, claiming the need of critical dialogue; also refers to the phytosociological designation of a temporary combination of living beings.</i></p>
 					<p class="copyright">Programming and design : Hugo Fouassier / Photography : Candice Le Dréau.</p>
 						<div id="rs">
+						<div id="Instagram">
 							<a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/synusia.studio">
 								<img src="instagram.png" alt="Instagram"/>
 							</a>
+						</div>
 							<a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/synusiastudio">
 								<img src="facebook.png" alt="Facebook"/>
 							</a>
-						</div>
+					</div>
 				</footer>
 		</body>
 </html>
