--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 		<head>
 			<meta charset="utf-8" />
 			<link rel="stylesheet" href="index.css" />
-			<title> Synusia Studio | Studio nomade basé à Angers </title>
+			<title> Synusia Studio | Studio mobile basé à Angers </title>
 			<link rel="icon" href="Formes.png" />
 		</head>
 		
@@ -33,7 +33,7 @@
 				</article>
 			
 				<footer>
-					<div class="ENG"><a href="indexENG.html"><img src="ukflag.png"></a/></div>
+					<div class="ENG"><a href="homeENG.html"><img src="ukflag.png"></a/></div>
 					<p class="quote"><i><b>synusia</b>, nom féminin, du grec ancien "συνουσία" ("existence en commun, personnes réunies") : principe fondateur de l'Académie de Platon, revendiquant le besoin de dialogue critique; désigne également en phytosociologie une association temporaire d'organismes vivants.</i></p>
 					<p class="copyright">Programmation et design : Hugo Fouassier / Photographie : Candice Le Dréau.</p>
 					<div id="rs">
