--- a/productionsENG.html
+++ b/productionsENG.html
@@ -29,7 +29,7 @@
 					</div>
 				</header>
 			
-			<article class="first"><u>(Diverse yet non-exhaustive selection, nor necessarily updated :))</u></article>
+			<article class="first"><u>(Diverse yet non-exhaustive selection, nor necessarily up to date :))</u></article>
 			
 			<article class="second">	
 
