--- a/contact.html
+++ b/contact.html
@@ -2,11 +2,11 @@
 <html>
 		<head>
 			<meta charset="utf-8" />
+			<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">			
 			<link rel="stylesheet" href="contact.css" />
 			<title> Synusia Studio | Studio mobile basé à Angers </title>
 			<link rel="icon" href="Formes.png" />
 		</head>
-		
 		<body>
 			<div id="fade">
 				<header>
@@ -27,7 +27,6 @@
 						</nav>
 					</div>
 				</header>
-			
 				<article>
 					<div class="first">
 						<p>Pour échanger au sujet de votre projet et <b>établir un devis</b>, je vous invite à me le décrire de la manière la plus détaillée possible, afin de <b>cerner au mieux vos envies et vos besoins</b>.</p>
@@ -39,7 +38,6 @@
 						<p>(Par respect pour votre projet ainsi que pour cette étape cruciale de la production d'un disque, je ne masterise pas les projets que je mixe. En revanche, je peux vous orienter vers des technicien.nes qui sauront achever votre projet dans les règles de l'art !)</p>
 					</div>
 				</article>
-			
 				<footer>
 					<p class="quote"><i><b>synusia</b>, nom féminin, du grec ancien "συνουσία" ("existence en commun, personnes réunies") : principe fondateur de l'Académie de Platon, revendiquant le besoin de dialogue critique; désigne également en phytosociologie une association temporaire d'organismes vivants.</i></p>
 					<p class="copyright">Programmation et design : Hugo Fouassier / Photographie : Candice Le Dréau.</p>
