--- a/contactENG.html
+++ b/contactENG.html
@@ -2,11 +2,11 @@
 <html>
 		<head>
 			<meta charset="utf-8" />
+			<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">			
 			<link rel="stylesheet" href="contact.css" />
 			<title>Synusia Studio | Mobile studio based in Angers (France)</title>
 			<link rel="icon" href="Formes.png" />
 		</head>
-		
 		<body>
 			<div id="fade">
 				<header>
@@ -27,7 +27,6 @@
 						</nav>
 					</div>
 				</header>
-			
 				<article>
 					<div class="first">
 						<p>To discuss your project and <b>get a quote</b>, I invite you to describe it to me in the most detailed way, in order to <b>best identify and meet your needs and wishes</b>.</p>
@@ -39,7 +38,6 @@
 						<p>(Out of respect for your project and this crucial step of a record’s production, I don’t master the projects I already mixed. However, I can recommend engineers to put these finishing touches to your record!)</p>
 					</div>
 				</article>
-			
 				<footer>
 					<p class="quote"><i><b>synusia</b>, feminine noun, from the Ancient Greek "συνουσία" ("shared existence, gathered people"): founding principle of Plato's Academy, claiming the need of critical dialogue; also refers to the phytosociological designation of a temporary combination of living beings.</i></p>
 					<p class="copyright">Programming and design : Hugo Fouassier / Photography : Candice Le Dréau.</p>
