--- a/homeENG.html
+++ b/homeENG.html
@@ -2,11 +2,11 @@
 <html>
 		<head>
 			<meta charset="utf-8" />
+			<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">			
 			<link rel="stylesheet" href="index.css" />
 			<title>Synusia Studio | Mobile studio based in Angers (France)</title>
 			<link rel="icon" href="Formes.png" />
 		</head>
-		
 		<body>
 			<div id="fade">
 				<header>
@@ -27,11 +27,8 @@
 						</nav>
 					</div>
 				</header>
-			
 				<article>
-				
 				</article>
-			
 				<footer>
 					<div class="ENG"><a href="home.html"><img src="frenchflag.png"></a/></div>
 					<p class="quote"><i><b>synusia</b>, feminine noun, from the Ancient Greek "συνουσία" ("shared existence, gathered people"): founding principle of Plato's Academy, claiming the need of critical dialogue; also refers to the phytosociological designation of a temporary combination of living beings.</i></p>
