--- a/about.html
+++ b/about.html
@@ -2,11 +2,11 @@
 <html>
 		<head>
 			<meta charset="utf-8" />
+			<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 			<link rel="stylesheet" href="about.css" />
 			<title> Synusia Studio | Studio mobile basé à Angers </title>
 			<link rel="icon" href="Formes.png" />
 		</head>
-		
 		<div id="fade">
 				<header>
 					<div id="logo">
@@ -26,7 +26,6 @@
 						</nav>
 					</div>
 				</header>
-			
 				<article>
 					<p><b>Synusia Studio</b> est une structure mobile basée à <b>Angers (France)</b>, fondée et dirigée par <b>Hugo Fouassier</b>, musicien et technicien son (live/studio).</p>
 					<p></p>Elle propose des services <b>d’enregistrement</b> s’adaptant à tous les espaces de prise (studio, scène, lieux atypiques...) et à tous les workflows (prises live, semi-live, overdubs/re-re…), mais également des prestations de <b>mixage</b> et de <b>mastering</b>. Pour chaque étape, une participation plus ou moins importante à la <b>direction artistique</b> du projet est possible.</p>
@@ -34,7 +33,6 @@
 					<p>Les projets sortant du cadre classique du studio, comme la captation et le mixage de <b>concerts</b>, de <b>podcasts</b> ou encore de <b>livres audio</b> sont évidemment les bienvenus.</p>
 					<p>
 				</article>
-			
 				<footer>
 					<p class="quote"><i><b>synusia</b>, nom féminin, du grec ancien "συνουσία" ("existence en commun, personnes réunies") : principe fondateur de l'Académie de Platon, revendiquant le besoin de dialogue critique; désigne également en phytosociologie une association temporaire d'organismes vivants.</i></p>
 					<p class="copyright">Programmation et design : Hugo Fouassier / Photographie : Candice Le Dréau.</p>
