--- a/aboutENG.html
+++ b/aboutENG.html
@@ -2,11 +2,11 @@
 <html>
 		<head>
 			<meta charset="utf-8" />
+			<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">			
 			<link rel="stylesheet" href="about.css" />
 			<title>Synusia Studio | Mobile studio based in Angers (France)</title>
 			<link rel="icon" href="Formes.png" />
 		</head>
-		
 		<div id="fade">
 				<header>
 					<div id="logo">
@@ -14,7 +14,6 @@
 								<img src="Logo site.png" alt="Logo"/>
 							</a>
 					</div>
-					
 						<nav>
 							<ul>
 								<div id="nav">
@@ -26,7 +25,6 @@
 						</nav>
 					</div>
 				</header>
-			
 				<article>
 					<p><b>Synusia Studio</b> is a mobile studio based in <b>Angers (France)</b>, founded and operated by <b>Hugo Fouassier</b>, musician and audio tech (live/studio).</p>
 					<p>It offers <b>recording</b> services tailoring every recording space (studios, stages, atypical environments…) and workflow (live takes, partial live takes, overdubs/re-re…), but also <b>mixing</b> and <b>mastering</b> services. For every step of the process, a more or less significant participation in the <b>artistic direction</b> is possible.</p>
@@ -34,7 +32,6 @@
 					<p>Projects falling outside the usual studio framework, such as the recording and mixing of <b>liveshows</b>, <b>podcasts</b> or even <b>audio books</b> are always welcome.</p>
 					<p>
 				</article>
-			
 				<footer>
 					<p class="quote"><i><b>synusia</b>, feminine noun, from the Ancient Greek "συνουσία" ("shared existence, gathered people"): founding principle of Plato's Academy, claiming the need of critical dialogue; also refers to the phytosociological designation of a temporary combination of living beings.</i></p>
 					<p class="copyright">Programming and design : Hugo Fouassier / Photography : Candice Le Dréau.</p>
