--- a/home.html
+++ b/home.html
@@ -2,11 +2,11 @@
 <html>
 		<head>
 			<meta charset="utf-8" />
+			<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">			
 			<link rel="stylesheet" href="index.css" />
 			<title> Synusia Studio | Studio mobile basé à Angers </title>
 			<link rel="icon" href="Formes.png" />
 		</head>
-		
 		<body>
 			<div id="fade">
 				<header>
@@ -27,9 +27,7 @@
 						</nav>
 					</div>
 				</header>
-			
 				<article>
-				
 				</article>
 			
 				<footer>
