--- a/productionsENG.html
+++ b/productionsENG.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 		<head>
 			<meta charset="utf-8" />
-			<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">			
+			<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">		
 			<link rel="stylesheet" href="productions.css" />
 			<link rel="stylesheet" type="text/css" href="magnific-popup.css">
 			<title>Synusia Studio | Mobile studio based in Angers (France)</title>
