--- a/aboutENG.html
+++ b/aboutENG.html
@@ -2,6 +2,7 @@
 <html>
 		<head>
 			<meta charset="utf-8" />
+			<meta name="keywords" content="synusia, studio, hugo, fouassier, angers, france, enregistrement, captation, recording, mixing, mixage, mastering, son, technicien, tech, ingénieur, engineer, artistic, direction, directeur, artistique, musique, live, music, production, producteur, producer, album, EP, podcast, audiobook, livre, audio, scuffles, dogs, for, friends, salammbo, enokham, lunar, lock, capharnaüm, sessions">
 			<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">		
 			<link rel="stylesheet" href="about.css" />
 			<title>Synusia Studio | Mobile studio based in Angers (France)</title>
@@ -29,7 +30,7 @@
 					<p><b>Synusia Studio</b> is a mobile studio based in <b>Angers (France)</b>, founded and operated by <b>Hugo Fouassier</b>, musician and audio tech (live/studio).</p>
 					<p>It offers <b>recording</b> services tailoring every recording space (studios, stages, atypical environments…) and workflow (live takes, partial live takes, overdubs/re-re…), but also <b>mixing</b> and <b>mastering</b> services. For every step of the process, a more or less significant participation in the <b>artistic direction</b> is possible.</p>
 					<p>In order to best prepare your recordings, it is also possible to plan <b>pre-productions</b> sessions, in close if not identical conditions to the recording sessions.</p>
-					<p>Projects falling outside the usual studio framework, such as the recording and mixing of <b>liveshows</b>, <b>podcasts</b> or even <b>audio books</b> are always welcome.</p>
+					<p>Projects falling outside the usual studio framework, such as the recording and mixing of <b>live shows</b>, <b>podcasts</b> or even <b>audio books</b> are always welcome.</p>
 					<p>
 				</article>
 				<footer>
