--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 		<head>
+			<meta name="keywords" content="synusia, studio, hugo, fouassier, angers, france, enregistrement, captation, recording, mixing, mixage, mastering, son, technicien, tech, ingénieur, engineer, artistic, direction, directeur, artistique, musique, live, music, production, producteur, producer, album, EP, podcast, audiobook, livre, audio, scuffles, dogs, for, friends, salammbo, enokham, lunar, lock, capharnaüm, sessions">
 			<meta charset="utf-8" />
 			<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
 			<link rel="stylesheet" href="index.css" />
