--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
 			<title> Synusia Studio | Studio mobile basé à Angers </title>
 			<link rel="icon" href="Formes.png" />
 		</head>
+		<body>
 		<div id="fade">
 				<header>
 					<div id="logo">
