--- a/aboutENG.html
+++ b/aboutENG.html
@@ -8,6 +8,7 @@
 			<title>Synusia Studio | Mobile studio based in Angers (France)</title>
 			<link rel="icon" href="Formes.png" />
 		</head>
+		<body>
 		<div id="fade">
 				<header>
 					<div id="logo">
