--- a/about.html
+++ b/about.html
@@ -27,6 +27,15 @@
 							</ul>
 						</nav>
 					</div>
+						<nav>
+							<ul>
+								<div id="nav2">
+									<div class="element"><a href="about.html">À PROPOS</a></div>
+									<div class="element"><a href="productions.html">PRODUCTIONS</a></div>
+									<div class="element"><a href="contact.html">CONTACT</a></div>
+								</div>
+							</ul>
+						</nav>
 				</header>
 				<article>
 					<p><b>Synusia Studio</b> est une structure mobile basée à <b>Angers (France)</b>, fondée et dirigée par <b>Hugo Fouassier</b>, musicien et technicien son (live/studio).</p>
