--- a/aboutENG.html
+++ b/aboutENG.html
@@ -26,6 +26,15 @@
 							</ul>
 						</nav>
 					</div>
+						<nav>
+							<ul>
+								<div id="nav2">
+									<div class="element"><a href="aboutENG.html">ABOUT</a></div>
+									<div class="element"><a href="productionsENG.html">PRODUCTIONS</a></div>
+									<div class="element"><a href="contactENG.html">CONTACT</a></div>
+								</div>
+							</ul>
+						</nav>
 				</header>
 				<article>
 					<p><b>Synusia Studio</b> is a mobile studio based in <b>Angers (France)</b>, founded and operated by <b>Hugo Fouassier</b>, musician and audio tech (live/studio).</p>
