--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 		<head>
 			<meta charset="utf-8" />
 			<meta name="keywords" content="synusia, studio, hugo, fouassier, angers, france, enregistrement, captation, recording, mixing, mixage, mastering, son, technicien, tech, ingénieur, engineer, artistic, direction, directeur, artistique, musique, live, music, production, producteur, producer, album, EP, podcast, audiobook, livre, audio, scuffles, dogs, for, friends, salammbo, enokham, lunar, lock, capharnaüm, sessions">
-			<meta name="viewport" content="width=device-width, height=device-height">
+			<meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, user-scalable=no">
 			<link rel="stylesheet" href="contact.css" />
 			<title> Synusia Studio | Studio mobile basé à Angers </title>
 			<link rel="icon" href="Formes.png" />
@@ -16,7 +16,6 @@
 								<img src="Logo site.png" alt="Logo"/>
 							</a>
 					</div>
-					
 						<nav>
 							<ul>
 								<div id="nav">
@@ -27,6 +26,15 @@
 							</ul>
 						</nav>
 					</div>
+						<nav>
+							<ul>
+								<div id="nav2">
+									<div class="element"><a href="about.html">À PROPOS</a></div>
+									<div class="element"><a href="productions.html">PRODUCTIONS</a></div>
+									<div class="element"><a href="contact.html">CONTACT</a></div>
+								</div>
+							</ul>
+						</nav>
 				</header>
 				<article>
 					<div class="first">
