--- a/contactENG.html
+++ b/contactENG.html
@@ -27,6 +27,15 @@
 							</ul>
 						</nav>
 					</div>
+					<nav>
+							<ul>
+								<div id="nav2">
+									<div class="element"><a href="aboutENG.html">ABOUT</a></div>
+									<div class="element"><a href="productionsENG.html">PRODUCTIONS</a></div>
+									<div class="element"><a href="contactENG.html">CONTACT</a></div>
+								</div>
+							</ul>
+						</nav>
 				</header>
 				<article>
 					<div class="first">
