--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
 							</ul>
 						</nav>
 					</div>
+						<nav>
+							<ul>
+								<div id="nav2">
+									<div class="element"><a href="about.html">À PROPOS</a></div>
+									<div class="element"><a href="productions.html">PRODUCTIONS</a></div>
+									<div class="element"><a href="contact.html">CONTACT</a></div>
+								</div>
+							</ul>
+						</nav>
 				</header>
 				<article>
 				</article>
