--- a/productions.html
+++ b/productions.html
@@ -17,7 +17,6 @@
 								<img src="Logo site.png" alt="Logo"/>
 							</a>
 					</div>
-					
 						<nav>
 							<ul>
 								<div id="nav">
@@ -28,6 +27,15 @@
 							</ul>
 						</nav>
 					</div>
+					<nav>
+						<ul>
+							<div id="nav2">
+									<div class="element"><a href="about.html">À PROPOS</a></div>
+									<div class="element"><a href="productions.html">PRODUCTIONS</a></div>
+									<div class="element"><a href="contact.html">CONTACT</a></div>
+								</div>
+							</ul>
+						</nav>
 				</header>
 			<article class="first"><u>(Séléction variée mais non-exhaustive, ni forcément à jour :))</u></article>
 			<article class="second">
@@ -52,7 +60,7 @@
 						<div class="overlay"></div>
 					</div>
 					<div class="container" id="5">
-						<img src="ipu4e.jpg" alt="IPU4E">
+						<img src="fra.jpg" alt="Fragile">
 						<a target="_blank" rel="noopener noreferrer">
 						<div class="overlay"></div>
 					</div>
@@ -84,7 +92,7 @@
 						<div class="overlay"></div>
 					</div>
 					<div class="container" id="11">
-						<img src="meg.jpg" alt="Michelle & les Garçons">
+						<img src="lon.jpg" alt="Lonny">
 						<a target="_blank" rel="noopener noreferrer">
 						<div class="overlay"></div>
 					</div>
@@ -110,6 +118,92 @@
 					</div>
 					<div class="container" id="16">
 						<img src="lb.jpg" alt="La Battue - Capharnaüm Sessions">
+						<a target="_blank" rel="noopener noreferrer">
+						<div class="overlay"></div>
+					</div>
+				</article>
+				<article class="firstMOB"><u>(Séléction variée mais non-exhaustive, ni forcément à jour :))</u></article>
+				<article class="secondMOB">
+					<div class="container" id="17">
+						<img src="cha.jpg" alt="Chahu">
+						<a target="_blank" rel="noopener noreferrer">
+						<div class="overlay"></div>
+					</div>
+					<div class="container" id="18">
+						<img src="ll.jpg" alt="Lunar Lock - Night Frog">
+						<a target="_blank" rel="noopener noreferrer"></a>
+						<div class="overlay"></div>
+					</div>
+					<div class="container" id="19">
+						<img src="enokham.jpg" alt="Enokham">
+						<a target="_blank" rel="noopener noreferrer"></a>
+						<div class="overlay"></div>
+					</div>
+				</article>
+				<article class="thirdMOB">
+					<div class="container" id="20">
+						<img src="totalrumble.jpg" alt="Total Rumble">
+						<a target="_blank" rel="noopener noreferrer">
+						<div class="overlay"></div>
+					</div>
+					<div class="container" id="21">
+						<img src="fra.jpg" alt="Fragile">
+						<a target="_blank" rel="noopener noreferrer">
+						<div class="overlay"></div>
+					</div>
+					<div class="container" id="22">
+						<img src="lnr.jpg" alt="Louis LNR">
+						<a target="_blank" rel="noopener noreferrer"></a>
+						<div class="overlay"></div>
+					</div>
+				</article>
+				<article class="fourthMOB">
+					<div class="container" id="23">
+						<img src="sal.jpg" alt="Salammbô">
+						<a target="_blank" rel="noopener noreferrer">
+						<div class="overlay"></div>
+					</div>
+					<div class="container" id="24">
+						<img src="scuffles.jpg" alt="Scuffles">
+						<a target="_blank" rel="noopener noreferrer"></a>
+						<div class="overlay"></div>
+					</div>
+					<div class="container" id="25">
+						<img src="tf.jpg" alt="Trainfantome - Capharnaüm Sessions">
+						<a target="_blank" rel="noopener noreferrer">
+						<div class="overlay"></div>
+					</div>
+				</article>
+				<article class="fifthMOB">
+					<div class="container" id="26">
+						<img src="sf.jpg" alt="Special Friend - Capharnaüm Sessions">
+						<a target="_blank" rel="noopener noreferrer">
+						<div class="overlay"></div>
+					</div>
+					<div class="container" id="27">
+						<img src="lon.jpg" alt="Lonny - Capharnaüm Sessions">
+						<a target="_blank" rel="noopener noreferrer">
+						<div class="overlay"></div>
+					</div>
+					<div class="container" id="28">
+						<img src="siz.jpg" alt="SIZ - Capharnaüm Sessions">
+						<a target="_blank" rel="noopener noreferrer">
+						<div class="overlay"></div>
+					</div>
+				</article>
+				<article class="sixthMOB">
+					<div class="container" id="29">
+						<img src="cat.jpg" alt="Cathédrale - Capharnaüm Sessions">
+						<a target="_blank" rel="noopener noreferrer">
+						<div class="overlay"></div>
+					</div>
+					<div class="container" id="30">
+						<img src="bac.jpg" alt="Bacchantes - Capharnaüm Sessions">
+						<a target="_blank" rel="noopener noreferrer">
+						<div class="overlay"></div>
+					</div>
+					<div class="container" id="31">
+						<img src="cd.jpg" alt="Claire Days - Capharnaüm Sessions">
 						<a target="_blank" rel="noopener noreferrer">
 						<div class="overlay"></div>
 					</div>
