--- a/homeENG.html
+++ b/homeENG.html
@@ -3,7 +3,7 @@
 		<head>
 			<meta charset="utf-8" />
 			<meta name="keywords" content="synusia, studio, hugo, fouassier, angers, france, enregistrement, captation, recording, mixing, mixage, mastering, son, technicien, tech, ingénieur, engineer, artistic, direction, directeur, artistique, musique, live, music, production, producteur, producer, album, EP, podcast, audiobook, livre, audio, scuffles, dogs, for, friends, salammbo, enokham, lunar, lock, capharnaüm, sessions">
-			<meta name="viewport">	
+			<meta name="viewport" content="width=device-width, height=device-height">
 			<link rel="stylesheet" href="index.css" />
 			<title>Synusia Studio | Mobile studio based in Angers (France)</title>
 			<link rel="icon" href="Formes.png" />
