--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<img src="Rework Synusia White.png" alt="Logo"
-							width="20%"
-							height="20%"/>
+							<img src="Rework Synusia White.png" alt="Logo" width="20%" height="20%"/>
 						</div>
 						<div class="content">
 							<div class="inner">
