--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Synusia Studio</h1>
+								<h3>συνουσία</h3>
 							</div>
 						</div>
 						<nav>
@@ -54,7 +55,7 @@
 							<article id="work">
 								<h2 class="major">Crédits</h2>
 								<p>Quelques artistes qui m'ont accordé leur confiance pour de l'enregistrement, du live, du mix, une live session, une pré-production, du mastering :</p>
-								<p>Bacchantes · Cathédrale · Chahu · Claire Days · Dalès · Dogs For Friends · En Attendant Ana · Enokham · Fontanarosa · Fragile · Gabriel Kröger · Hoorses · Hyperjacuzzi · Irnini Mons · Joanne O Joan · Johnnie Carwash · KissDoomFate · Krōdha · La Battue · La Houle · Lonny · Lunar Lock · Maëlle Taina · Oda · Péniche · Rest Up · Salammbô · San Carol · Scuffles · SIZ · Special Friend · ST-B · The Sheraf Brothers · Trainfantôme · Wild Fox · Wolran · Year Zero...</p>
+								<p>Bacchantes · Cathédrale · Chahu · Claire Days · Dalès · Dogs For Friends · En Attendant Ana · Enokham · Fontanarosa · Fragile · Gabriel Kröger · Hoorses · Hyperjacuzzi · Irnini Mons · Joanne O Joan · Johnnie Carwash · Krōdha · La Battue · La Houle · Lonny · Lunar Lock · Maëlle Taina · Oda · Péniche · Salammbô · San Carol · Scuffles · SIZ · Special Friend · ST-B · The Sheraf Brothers · Trainfantôme · Wild Fox · Wolran · Year Zero...</p>
 							</article>
 
 						<!-- Contact -->
