--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<title>Synusia Studio</title>
 		<meta charset="utf-8" />
 		<meta name="keywords" content="synusia, studio, hugo, fouassier, angers, france, enregistrement, captation, recording, mixing, mixage, mastering, son, technicien, tech, ingénieur, engineer, artistic, direction, directeur, artistique, musique, live, music, production, producteur, producer, album, EP, podcast, audiobook, livre, audio">
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="viewport" content="width=1024">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link rel="icon" href="Formes.png" />
